--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "recharts": "^2.13.2",
     "tailwindcss": "^3.4.14",
     "web-vitals": "^2.1.4"
